Se arreglo el input number de la tarjeta

--- a/register.html
+++ b/register.html
@@ -87,11 +87,11 @@
                 <section class="metodoDePago">
                     <article class="metodoDePago__tarjetaDeDebitoOCredito">
                         <input class="radio" type="radio" name="metodoDePago" id="tarjetaDeDebitoOCredito" />
-                        <input class="metodoDePago__tarjetaDeDebitoOCredito__numeroDeTarjeta" type="tel"
-                            pattern="[0-9]{16}" name="tarjetaDeDebitoOCredito" id="tarjetaDeDebitoOCredito"
+                        <input class="metodoDePago__tarjetaDeDebitoOCredito__numeroDeTarjeta" type="number"
+                            name="tarjetaDeDebitoOCredito" id="tarjetaDeDebitoOCredito"
                             placeholder="N&uacute;mero de tarjeta">
-                        <input class="metodoDePago__tarjetaDeDebitoOCredito__codigoDeSeguridad" type="tel"
-                            pattern="[0-9]{3}" name="codigoDeSeguridad" id="codigoDeSeguridad" placeholder="Clave">
+                        <input class="metodoDePago__tarjetaDeDebitoOCredito__codigoDeSeguridad" type="number"
+                            name="codigoDeSeguridad" id="codigoDeSeguridad" placeholder="Clave">
                     </article>
 
                     <article class="cuponDePago">
@@ -99,7 +99,7 @@
                             <input class="radio" type="radio" name="metodoDePago" id="cuponDePago" />
                             <label class="transferenciaBancaria" for="cuponDePago">Cup&oacute;n de pago</label>
                         </article>
-                        
+
                         <article class="seleccionDeCuponDePago">
                             <input class="metodoDePago__cuponDePago" type="checkbox" id="pagoFacil" />
                             <label class="cuponDePago__pagoFacil" for="pagoFacil">Pago facil</label>
