json de las pelis y series

--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -68,7 +68,7 @@
             </section>
             <section class="pelicula-similar">
               <a href="./info-pelicula.html"><img class="img-pelicula-similar"
-                src="./images/shaolin-soccer-mini.png"
+                src="./images/shaolin-soccer_hero.png"
                 alt="Shaolin Soccer"
               /></a>
               <h3 class="titulo-pelicula_recomendada">Shaolin Soccer</h3>
@@ -82,7 +82,7 @@
             </section>
             <section class="pelicula-similar">
               <a href="./info-pelicula.html"><img  class="img-pelicula-similar"
-                src="./images/super-cool-mini.png"
+                src="./images/super-cool_hero.png"
                 alt="Super Cool"
               /></a>
               <h3 class="titulo-pelicula_recomendada">Super Cool</h3>
