--- a/recuperar-contraseña.html
+++ b/recuperar-contraseña.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,17 @@
     <link rel="icon" type="image/png" href="https://w7.pngwing.com/pngs/242/287/png-transparent-hbo-logo-black.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/headerYFooter.css"
+    <link
+        href="https://fonts.googleapis.com/css2?family=New+Amsterdam&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles/headerYFooter.css">
 </head>
+
 <body>
     <header class="header">
-        <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
-    </header> 
+        <a href="index.html"><img class="headerimg"
+                src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
+    </header>
     <main>
         <form class="formtext">
             <section class="h1-title">
@@ -31,7 +36,7 @@
             <section class="inputs">
                 <div class="datos">
                     <h3 class="h3correo">Correo electronico</h3>
-                <input type="email" id="email" required placeholder="Ingrese email">
+                    <input type="email" id="email" required placeholder="Ingrese email">
                 </div>
             </section>
             <section class="buttons">
@@ -127,4 +132,5 @@
             </section> -->
     </footer>
 </body>
+
 </html>
