peliculas y series agregadas con js

--- a/main.html
+++ b/main.html
@@ -40,36 +40,7 @@
         </section>
         <h2 class="h2-destacados">Destacados</h2>
         <section class="content">
-            <a href="info-pelicula.html">
-                <img src="images/hulk_movie.jpg" alt="Pelicula" class="img">
-            </a>
-            <a href="info-series.html">
-                <img src="images/the-office_series.jpg" alt="Pelicula" class="img">
-            </a>
-            <a href="info-pelicula.html">
-                <img src="images/shaolin-soccer_movie.png" alt="Pelicula" class="img">
-            </a>
-            <a href="info-series.html">
-                <img src="images/death-note_series.jpg" alt="Pelicula" class="img">
-            </a>
-            <a href="info-pelicula.html">
-                <img src="images/bad-boys_movie.jpg" alt="Pelicula" class="img">
-            </a>
-            <a href="info-series.html">
-                <img src="images/squid-game_series.jpg" alt="Pelicula" class="img">
-            </a>
-            <a href="info-pelicula.html">
-                <img src="images/baila-vini_movie.jpg" alt="Pelicula" class="img">
-            </a>
-            <a href="info-series.html">
-                <img src="images/breaking-bad_series.jpg" alt="Pelicula" class="img">
-            </a>
-            <a href="info-pelicula.html">
-                <img src="images/supercool_movie.png" alt="Pelicula" class="img">
-            </a>
-            <a href="info-series.html">
-                <img src="images/eternauta_series.jpg" alt="Pelicula" class="img">
-            </a>
+            <!-- IMAGENES DE LAS PELICULAS Y SERIES -->
         </section>
     </main>
     <footer>
@@ -158,5 +129,7 @@
                 </a>
             </section>
     </footer>
+    <script src="js/peliculasyseries.js"></script>
+    <script src="js/home.js"></script>
 </body>
 </html>
