--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li class="activo"><a href="main.html">HOME</a></li>
-                <li><a href="peliculas.html">PELÍCULAS</a></li>
+                <li><a class="btn-peliculas" href="peliculas.html">PELÍCULAS</a></li>
                 <li><a href="series.html">SERIES</a></li>
                 <li><a href="usuario.html">PERFIL</a></li>
                 <li><a href="index.html">CERRAR SESION</a></li>
