filtrado de peliculas y series (me queda arreglar el de series)

--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
         <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
         <nav>
             <ul>
-                <li class="activo"><a href="main.html">HOME</a></li>
-                <li><a class="btn-peliculas" href="peliculas.html">PELÍCULAS</a></li>
-                <li><a href="series.html">SERIES</a></li>
+                <li class="activo"><a>HOME</a></li>
+                <li><a class="btn-peliculas">PELÍCULAS</a></li>
+                <li><a class="btn-series">SERIES</a></li>
                 <li><a href="usuario.html">PERFIL</a></li>
                 <li><a href="index.html">CERRAR SESION</a></li>
             </ul>
