--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
         <a href="index.html"><img class="headerimg" src="https://images.cdn.prd.api.discomax.com/05b7/3d4a7e2b0215.png?h=30&f=webp" alt="HBO LOGO"></a>
         <nav>
             <ul>
-                <li class="activo"><a>HOME</a></li>
+                <li class="btn-home"><a>HOME</a></li>
                 <li><a class="btn-peliculas">PELÍCULAS</a></li>
                 <li><a class="btn-series">SERIES</a></li>
                 <li><a href="usuario.html">PERFIL</a></li>
