filtrado por genero

--- a/main.html
+++ b/main.html
@@ -28,10 +28,15 @@
                     <img src="images/arrow.png" alt="Arrow" class="arrow">
                 </a>
                 <div class="dropdown-content">
-                    <a class="sub-link" href="main.html">Accion</a>
-                    <a class="sub-link" href="main.html">Comedia</a>
-                    <a class="sub-link" href="main.html">Drama</a>
-                    <a class="sub-link" href="main.html">Ninguna</a>
+                    <a class="genero-accion" >Accion</a>
+                    <a class="genero-adolescente">Adolescente</a>
+                    <a class="genero-cf">C. Ficcion</a>
+                    <a class="genero-comedia" >Comedia</a>
+                    <a class="genero-drama" >Drama</a>
+                    <a class="genero-documental">Documental</a>
+                    <a class="genero-fantasia">Fantasia</a>
+                    <a class="genero-suspenso">Suspenso</a>
+                    <a class="ningun-genero" >Ninguna</a>
             </li>    
             <li class="search-container">
                 <input class="search" type="search" placeholder="Buscar por nombre">
