Cambios en el html
Cambios en el responsive cuando se cambiaba el display none a flex en jv se desfiguraba el metodo de pago

--- a/register.html
+++ b/register.html
@@ -107,12 +107,16 @@
                     <article class="metodoDePago__tarjetaDeDebitoOCredito">
                         <input class="radio" type="radio" name="metodoDePago" />
                         <input class="metodoDePago__tarjetaDeDebitoOCredito__numeroDeTarjeta" type="number"
-                            name="tarjetaDeDebitoOCredito" placeholder="N&uacute;mero de tarjeta" required/>
+                            name="tarjetaDeDebitoOCredito" placeholder="N&uacute;mero de tarjeta" required />
                         <input class="metodoDePago__tarjetaDeDebitoOCredito__codigoDeSeguridad" type="number"
-                            name="codigoDeSeguridad" id="codigoDeSeguridad" placeholder="Clave" required/>
-                        <p class="codigoDeSeguridad-incorrecto">Clave inv&aacute;lida</p>
-                        <p class="numeroDeTarjeta-incorrecto">Tarjeta inv&aacute;lida</p>
+                            name="codigoDeSeguridad" id="codigoDeSeguridad" placeholder="Clave" required />
+                        <!-- <article class="validaciones">
+                            <p class="codigoDeSeguridad-incorrecto">Clave inv&aacute;lida</p>
+                            <p class="numeroDeTarjeta-incorrecto">Tarjeta inv&aacute;lida</p>
+                        </article> -->
                     </article>
+                    <p class="codigoDeSeguridad-incorrecto">Clave inv&aacute;lida</p>
+                    <p class="numeroDeTarjeta-incorrecto">Tarjeta inv&aacute;lida</p>
 
                     <article class="cuponDePago">
                         <article>
