info series dinamico

--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -46,7 +46,7 @@
             </p>
           </section>
 
-          <a href="https://www.youtube.com/watch?v=aT_IzP2eJaU" target="_blank"
+          <a class="btn-ver" id="btn-ver" href="" target="_blank"
             ><button class="btn-comprar">Ver ahora</button></a
           >
         </section>
