iframe + botones de capitulos y temporadas en peli-info y series-info + responsive

--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -47,12 +47,17 @@
           </section>
 
           <a class="btn-ver" id="btn-ver" href="" target="_blank"
-            ><button class="btn-comprar">Ver ahora</button></a
-          >
+            ><button class="btn-comprar">Ver ahora</button></a>
         </section>
       </section>
+                                       <section class="ifremaContenedor">
+          <iframe class="iframe-pelicula" id="iframe" src=""
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+          </iframe>  
+        </section>
     </section>
-
     <main>
       <section class="pelicula">
         <section class="recomendaciones">
@@ -89,23 +94,23 @@
           </section>
 
           <section class="container-pelicula_desc">
-            <section class="titulo_pelicula-descripcion">
-              <h1 id="titulo-detallado"></h1>
-            </section>
-            <section id="pelicula_descripcion-detallada">
-              <article>
-                <p id="descripcion-detallada">
-                </p>
-                <p id="elenco"></p>
-                <p id="director"></p>
-                <p id="productores"></p>
-              </article>
-              <article>
-                <p id="generos-detallado"></p>
-                <p id="año-detallado"><span></p>
-                <p id="clasificacion-detallado"></p>
-              </article>
-            </section>
+                    <section class="titulo_pelicula-descripcion">
+                        <h1 id="titulo-detallado"></h1>
+                    </section>
+                    <section class="pelicula_descripcion-detallada">
+                        <article>
+                            <p id="descripcion-detallada"></p>
+                            <p id="elenco"></p>
+                            <p id="director"></p>
+                            <p id="productores"></p>
+                        </article>
+                        <article>
+                            <p id="generos-detallado"></p>
+                            <p id="año-detallado"></p>
+                            <p id="clasificacion-detallado"></p>
+                        </article>
+                    </section>
+                </section>
           </section>
         </section>
       </section>
