--- a/info-series.html
+++ b/info-series.html
@@ -64,40 +64,26 @@
                         <button class="btn-comprar-movil">Verahora</button>
                     </a>
                     <select class="temporadas-movil" name="temporada" id="temporada">
-                        <option value="temporada1">Temporada 1</option>
-                        <option value="temporada2">Temporada 2</option>
-                        <option value="temporada3">Temporada 3</option>
-                        <option value="temporada4">Temporada 4</option>
-                        <option value="temporada5">Temporada 5</option>
-                        <option value="temporada6">Temporada 6</option>
+                        <option id="temporadasTemporada1" value="temporada1"></option>
                     </select>
 
                     <select class="capitulos-movil" name="capitulo" id="capitulo">
-                        <option value="capitulosTemporada1">Capitulo 1</option>
-                        <option value="capitulosTemporada1">Capitulo 2</option>
-                        <option value="capitulosTemporada1">Capitulo 3</option>
-                        <option value="capitulosTemporada1">Capitulo 4</option>
-                        <option value="capitulosTemporada1">Capitulo 5</option>
-                        <option value="capitulosTemporada1">Capitulo 6</option>
-                        <option value="capitulosTemporada1">Capitulo 7</option>
-                        <option value="capitulosTemporada1">Capitulo 8</option>
-                        <option value="capitulosTemporada1">Capitulo 9</option>
-                        <option value="capitulosTemporada1">Capitulo 10</option>
+                        <option id="capitulosTemporada1" value="capitulosTemporada1"></option>
                     </select>
-
-                    <section class="ifremaContenedor-movil">
-                        <iframe class="iframe-pelicula-movil" id="iframe-movil"
-                            src="https://www.youtube.com/embed/Ylv21uNzW4k?si=MPPbtb2I7o3xOWAs"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                        </iframe>
                 </div>
             </form>
+            <section class="ifremaContenedor-movil">
+                <iframe class="iframe-pelicula-movil" id="iframe-movil"
+                            src=""
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
+            </section>
         </section>
 
         <section class="ifremaContenedor">
-            <iframe class="iframe-pelicula" id="iframe" src="https://www.youtube.com/embed/NlJZ-YgAt-c?si=QT0f0Ty4FVurOdq5"
+            <iframe class="iframe-pelicula" id="iframe" src=""
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
