href de solopeli/serie arreglado

--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -18,8 +18,8 @@
         <nav>
             <ul>
             <li><a href="main.html">HOME</a></li>
-            <li><a href="peliculas.html">PELÍCULAS</a></li>
-            <li><a href="series.html">SERIES</a></li>
+            <li><a href="soloPelicula.html">PELÍCULAS</a></li>
+            <li><a href="soloSeries.html">SERIES</a></li>
             <li><a href="usuario.html">PERFIL</a></li>
             <li><a href="index.html">CERRAR SESION</a></li>
         </ul>
@@ -40,10 +40,7 @@
           </section>
           <section class="pelicula-descripcion">
             <p class="descripcion" id="descripcion">
-              <span class="span-titulo" id="pelicula-titulo-desc"></span> Blake
-              Lively estelariza esta adaptación de la novela de Colleen Hoover
-              sobre amor, resiliencia y la fortaleza que requiere romper ciclos.
-            </p>
+              <span class="span-titulo" id="pelicula-titulo-desc"></span></p>
           </section>
 
           <a class="btn-ver" id="btn-ver" href="" target="_blank"
