--- a/soloSeries.html
+++ b/soloSeries.html
@@ -135,7 +135,6 @@
             </section>
     </footer>
     <script src="js/peliculasyseries.js"></script>
-    <script src="js/genero"></script>
-    <script src="js/home.js"></script>
+    <script src="js/soloSeries.js"></script>
 </body>
 </html>
