--- a/soloPelicula.html
+++ b/soloPelicula.html
@@ -135,7 +135,7 @@
             </section>
     </footer>
     <script src="js/peliculasyseries.js"></script>
-    <script src="js/genero"></script>
-    <script src="js/home.js"></script>
+    <script src="js/genero.js"></script>
+    <script src="js/soloPelicula.js"></script>
 </body>
 </html>
