correccion del css de info peli

--- a/info-pelicula.html
+++ b/info-pelicula.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximumscale=1">
     <title>Better Call Saul</title>
-    <link rel="stylesheet" href="./styles/info-pelicula.css">
-    <link rel="stylesheet" href="./styles/headerYFooter.css" />
+    <link rel="stylesheet" href="./styles/info-series.css">
+    <link rel="stylesheet" href="./styles/headerYFooter.css"/>
+    <link rel="stylesheet" href="styles/info-pelicula.css"/>
 </head>
 
 <body>
@@ -52,13 +53,6 @@
                         target="_blank">
                         <button class="btn-comprar-movil">Verahora</button>
                     </a>
-                    <select class="temporadas-movil" name="temporada" id="temporada-movil">
-                        <option id="temporadasTemporada1" value="temporada1"></option>
-                    </select>
-
-                    <select class="capitulos-movil" name="capitulo" id="capitulo">
-                        <option id="capitulosTemporada1" value="capitulosTemporada1"></option>
-                    </select>
                 </div>
             </form>
             <section class="ifremaContenedor-movil">
